--- a/static/index.html
+++ b/static/index.html
@@ -18,11 +18,6 @@
   </head>
   <body>
     <div class="tooltip" style="opacity:0;"></div>
-    <svg>
-      <g id="timeline"></g>
-      <g font-size="10" font-family="sans-serif" text-anchor="middle" id="costflow" height="56" transform="translate(0, 16)"></g>
-      <g id="tasks"></g>
-    </svg>
-    <script src="gantt.js"></script>
+    <script src="tasksflow.js"></script>
   </body>
 </html>
