--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,16 @@
   </head>
   <body>
     <div class="tooltip" style="opacity:0;"></div>
+    <table>
+      <thead>
+          <th name="APUId">APU</th>
+          <th name="constrain">Lugar</th>
+      </thead>
+      <tbody>
+        <tr>
+        </tr>
+      </tbody>
+    </table>
     <script src="tasksflow.js"></script>
   </body>
 </html>
