--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,10 @@
     <script src="node_modules/d3/build/d3.min.js"></script>
     <script src="client.js"></script>
     <style>
+      body {
+        font-family: "sans-serif";
+        font-size: 10px;
+      }
       div.tooltip {
         position: absolute;
         padding: 2px;
@@ -17,16 +21,14 @@
     </style>
   </head>
   <body>
+    <!--  font-size="10" font-family="sans-serif" text-anchor="middle" -->
     <div class="tooltip" style="opacity:0;"></div>
     <table>
       <thead>
           <th name="APUId">APU</th>
           <th name="constrain">Lugar</th>
       </thead>
-      <tbody>
-        <tr>
-        </tr>
-      </tbody>
+      <tbody></tbody>
     </table>
     <script src="tasksflow.js"></script>
   </body>
