Muestre ahora si los flujos. Al menos la primera linea

--- a/static/index.html
+++ b/static/index.html
@@ -24,8 +24,10 @@
     <div class="tooltip" style="opacity:0;"></div>
     <table>
       <thead>
-        <th name="APUId">APU</th>
-        <th name="constrain">Lugar</th>
+        <th name="id">APU</th>
+        <th name="parent">-</th>
+        <th name="description">Descripcion</th>
+        <th name="unit">Unidad</th>
       </thead>
       <tbody></tbody>
     </table>
