--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,7 @@
     <div class="tooltip" style="opacity:0;"></div>
     <table>
       <thead>
+        <th name="expand">-</th>
         <th name="id">APU</th>
         <th name="parent">-</th>
         <th name="description">Descripcion</th>
