Pongale los totales

--- a/static/index.html
+++ b/static/index.html
@@ -28,6 +28,7 @@
         <th name="parent">-</th>
         <th name="description">Descripcion</th>
         <th name="unit">Unidad</th>
+        <th name="total">Total</th>
       </thead>
       <tbody></tbody>
     </table>
