--- a/static/index.html
+++ b/static/index.html
@@ -24,10 +24,15 @@
     <div class="tooltip" style="opacity:0;"></div>
     <table>
       <thead>
-        <th name="id">APU</th>
-        <th name="description">Descripcion</th>
-        <th name="unit">Unidad</th>
-        <th name="total">Total</th>
+        <tr>
+          <th name="id">APU</th>
+          <th name="description">Descripcion</th>
+          <th name="unit">Unidad</th>
+          <th name="total">Total</th>
+        </tr>
+        <tr class="periods">
+          <th colspan="4"></th>
+        </tr>
       </thead>
       <tbody></tbody>
     </table>
