--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,7 @@
     <table>
       <thead>
         <tr>
-          <th name="id">APU</th>
+          <th name="id">Código</th>
           <th name="description">Descripcion</th>
           <th name="unit">Unidad</th>
           <th name="total">Total</th>
