--- a/static/index.html
+++ b/static/index.html
@@ -21,7 +21,7 @@
         pointer-events: none;
       }
       table[show="cost"] span.qop {
-        display: none;
+        display: block;
       }
       table[show="qop"] span.cost {
         display: none;
