--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,9 @@
       table div {
         display: none;
       }
+      table div.qop {
+        display: block;
+      }
       table[show="cost"] div.cost {
         display: block;
       }
@@ -44,9 +47,6 @@
       table[show="cost_subcontrato"] div.cost_subcontrato {
         display: block;
       }
-      table[show="qop"] div.qop {
-        display: block;
-      }
     </style>
   </head>
   <body>
@@ -59,7 +59,6 @@
       <option value="cost_herramienta">Herramienta</option>
       <option value="cost_transporte">Transporte</option>
       <option value="cost_subcontrato">Subcontrato</option>
-      <option value="qop">Cantidad</option>
     </select>
     <script>
       'use strict';
